tests/ui/fmt/format-args-capture-first-literal-is-macro.stderr
error: there is no argument named `a`
  --> $DIR/format-args-capture-first-literal-is-macro.rs:16:26
   |
LL |     format!(identity_pm!("{a}"));
   |                          ^^^^^
   |
   = note: did you intend to capture a variable `a` from the surrounding scope?
   = note: to avoid ambiguity, `format_args!` cannot capture variables when the format string is expanded from a macro

error: there is no argument named `a`
  --> $DIR/format-args-capture-first-literal-is-macro.rs:8:9
   |
LL |         $tt
   |         ^^^
   |
   = note: did you intend to capture a variable `a` from the surrounding scope?
   = note: to avoid ambiguity, `format_args!` cannot capture variables when the format string is expanded from a macro

error: there is no argument named `a`
  --> $DIR/format-args-capture-first-literal-is-macro.rs:19:13
   |
LL |     format!(concat!("{a}"));
   |             ^^^^^^^^^^^^^^ in this macro invocation
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `concat!`
   |
   = note: did you intend to capture a variable `a` from the surrounding scope?
   = note: to avoid ambiguity, `format_args!` cannot capture variables when the format string is expanded from a macro

error: aborting due to 3 previous errors

